--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack build --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "make-parser": "peggy -o src/js/lib/logicLineParser.js --format es --dts src/parser.peggy",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,13 @@
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "peggy": "^4.2.0",
     "postcss-loader": "^8.1.1",
     "sass": "^1.83.1",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
