--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "build": "webpack build --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "make-parser": "peggy -o src/js/lib/logicLineParser.js --format es --dts src/parser.peggy",
-    "tsc": "tsc"
+    "tsc": "tsc --noEmit",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/flavio-a/HollowKnight-krlo-generator"
   },
+  "homepage": "http://flavio-a.github.io/HollowKnight-krlo-generator",
   "author": "flavio-a",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "peggy": "^4.2.0",
     "postcss-loader": "^8.1.1",
@@ -30,8 +34,5 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
-  },
-  "dependencies": {
-    "bootstrap": "^5.3.3"
   }
 }
